--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">gebeden-ionic</string>
-    <string name="title_activity_main">gebeden-ionic</string>
-    <string name="package_name">io.ionic.starter</string>
+    <string name="app_name">Katholieke Gebeden</string>
+    <string name="title_activity_main">Gebeden</string>
+    <string name="package_name">net.gelovenleren.gebeden</string>
     <string name="custom_url_scheme">io.ionic.starter</string>
 </resources>
